kubernetes/test/app-test-deployment-flask.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-api
  labels:
    app: flask-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-api
  template:
    metadata:
      labels:
        app: flask-api
    spec:
      containers:
        - name: flask
          image: ssinghal37/ml_flask_app:1.0
          ports:
            - containerPort: 5000
          env:
            - name: REDIS_HOST
              value: redis-db
            - name: REDIS_PORT
              value: "6379"
            - name: LOG_LEVEL
              value: INFO
