kubernetes/test/app-test-deployment-worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  labels:
    app: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: ssinghal37/ml_flask_app:1.0
          command: ["python", "worker.py"]
          env:
            - name: REDIS_HOST
              value: redis-db
            - name: REDIS_PORT
              value: "6379"
            - name: LOG_LEVEL
              value: INFO
