kubernetes/test/app-test-ingress-flask.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: flask-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: "flight-tracking-api.coe332.tacc.cloud"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flask-nodeport-svc
                port:
                  number: 5000
