kubernetes/test/app-test-service-flask.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
# random easter egg :D
spec:
  selector:
    app: flask-api
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: NodePort
