kubernetes/test/app-test-service-nodeport-flask.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-nodeport-svc
spec:
  type: NodePort
  selector:
    app: flask-api
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
